--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/rest-api-client-ng/tsconfig.lib.json",
             "project": "projects/rest-api-client-ng/ng-package.json"
@@ -35,6 +35,46 @@
             "tsConfig": [
               "projects/rest-api-client-ng/tsconfig.lib.json",
               "projects/rest-api-client-ng/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "testlib": {
+      "projectType": "library",
+      "root": "projects/testlib",
+      "sourceRoot": "projects/testlib/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/testlib/tsconfig.lib.json",
+            "project": "projects/testlib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/testlib/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/testlib/src/test.ts",
+            "tsConfig": "projects/testlib/tsconfig.spec.json",
+            "karmaConfig": "projects/testlib/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/testlib/tsconfig.lib.json",
+              "projects/testlib/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
