--- a/angular.json
+++ b/angular.json
@@ -44,5 +44,8 @@
       }
     }
   },
-  "defaultProject": "@senzing/rest-api-client-ng"
+  "defaultProject": "@senzing/rest-api-client-ng",
+  "cli": {
+    "analytics": false
+  }
 }
