--- a/projects/rest-api-client-ng/package.json
+++ b/projects/rest-api-client-ng/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/Senzing/rest-api-client-ng#readme",
   "peerDependencies": {
-    "@angular/common": "^12.2.14",
-    "@angular/core": "^12.2.14"
+    "@angular/common": "~13.0.3",
+    "@angular/core": "~13.0.3"
   },
   "dependencies": {
     "tslib": "^2.0.0"
