#78 config file cleanup

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "publish": "npm run build:docs && npm run package && cd ./dist/@senzing/rest-api-client-ng/ && npm publish --access private",
     "test": "ng test",
     "test:headless": "ng test --no-watch --watch=false --progress=false --no-progress --browsers=ChromeHeadlessCI",
-    "lint": "ng lint"
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "repository": {
@@ -47,27 +47,26 @@
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
     "@compodoc/compodoc": "^1.1.14",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
-    "@types/jasmine": "~3.8.0",
+    "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~3.10.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "karma-mocha-reporter": "^2.2.5",
-    "ng-packagr": "^13.1.1",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
