project updated to node@14 and @angular@13 (#81)
* wip. package-lock updates

* deps updated

* updated to ng11

* #78 wip ng11

* #78 ng12 wip

* #78 ng12 wip

* #78 ng12 wip

* #78 ng13 wip

* #78 ng13 wip

* #78 ng13 wip

* #78 cleanup

* #78 config file cleanup

* #78 typeo

* #78 merge fixes

* #78 github action to run tests

* #78 github actions for docs and package build

* #78 github actions updated. removed travis integration.

Co-authored-by: Ara <aratron@osmium.local>

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ speed-measure-plugin.json
 *.sublime-workspace
 
 # IDE - VSCode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -28,6 +29,7 @@ speed-measure-plugin.json
 !.vscode/extensions.json
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
