--- a/angular.json
+++ b/angular.json
@@ -4,22 +4,25 @@
   "newProjectRoot": "projects",
   "projects": {
     "@senzing/rest-api-client-ng": {
+      "projectType": "library",
       "root": "projects/rest-api-client-ng",
       "sourceRoot": "projects/rest-api-client-ng/src",
-      "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/rest-api-client-ng/tsconfig.lib.json",
             "project": "projects/rest-api-client-ng/ng-package.json"
           },
           "configurations": {
             "production": {
               "tsConfig": "projects/rest-api-client-ng/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/rest-api-client-ng/tsconfig.lib.json"
             }
-          }
+          },
+            "defaultConfiguration": "production"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -28,24 +31,12 @@
             "tsConfig": "projects/rest-api-client-ng/tsconfig.spec.json",
             "karmaConfig": "projects/rest-api-client-ng/karma.conf.js"
           }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/rest-api-client-ng/tsconfig.lib.json",
-              "projects/rest-api-client-ng/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
         }
       }
     }
   },
   "defaultProject": "@senzing/rest-api-client-ng",
   "cli": {
-    "analytics": false
+    "analytics": "544ec7f8-4c04-49ba-96ce-3cd59fd8763d"
   }
 }
