--- a/projects/rest-api-client-ng/package.json
+++ b/projects/rest-api-client-ng/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@senzing/rest-api-client-ng",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "A package providing restful http interfaces to typescript interfaces to @senzing/senzing-api-server. Utilizes the OpenAPI spec defined in the https://github.com/Senzing/senzing-rest-api-specification repository.",
   "repository": {
     "type": "git",
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/Senzing/rest-api-client-ng#readme",
   "peerDependencies": {
-    "@angular/common": "^10.2.3",
-    "@angular/core": "^10.2.3"
+    "@angular/common": "~13.0.3",
+    "@angular/core": "~13.0.3"
   },
   "dependencies": {
     "tslib": "^2.0.0"
