--- a/projects/rest-api-client-ng/package.json
+++ b/projects/rest-api-client-ng/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@senzing/rest-api-client-ng",
-  "version": "5.1.0",
+  "version": "6.0.0-alpha1",
   "description": "A package providing restful http interfaces to typescript interfaces to @senzing/senzing-api-server. Utilizes the OpenAPI spec defined in the https://github.com/Senzing/senzing-rest-api-specification repository.",
   "repository": {
     "type": "git",
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/Senzing/rest-api-client-ng#readme",
   "peerDependencies": {
-    "@angular/common": "~13.3.0",
-    "@angular/core": "~13.3.0"
+    "@angular/common": "^14.2.0",
+    "@angular/core": "^14.2.0"
   },
   "dependencies": {
     "tslib": "~2.3.0"
