--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "es2020",
+    "module": "ES2022",
     "paths": {
       "rest-api-client-ng": [
         "dist/@senzing/rest-api-client-ng/rest-api-client-ng",
@@ -30,7 +30,7 @@
       ]
     },
     "lib": [
-      "es2020",
+      "ES2022",
       "dom"
     ],
     "useDefineForClassFields": false
