Update Angular to version 15 (#172)
* #170 ng14 wip

* WIP

* post ng14 npm i

* post ng14 npm i

* #170 angular updated to version 15

* module and lib targets updated to ES2022

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
-    "module": "es2020",
+    "target": "ES2022",
+    "module": "ES2022",
     "paths": {
       "rest-api-client-ng": [
         "dist/@senzing/rest-api-client-ng/rest-api-client-ng",
@@ -30,9 +30,10 @@
       ]
     },
     "lib": [
-      "es2020",
+      "ES2022",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
