--- a/projects/rest-api-client-ng/package.json
+++ b/projects/rest-api-client-ng/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@senzing/rest-api-client-ng",
-  "version": "6.0.1",
+  "version": "6.1.0-alpha.1",
   "description": "A package providing restful http interfaces to typescript interfaces to @senzing/senzing-api-server. Utilizes the OpenAPI spec defined in the https://github.com/Senzing/senzing-rest-api-specification repository.",
   "repository": {
     "type": "git",
