add jscpd config, update workflow permissions

--- a/.github/workflows/npm-build.yaml
+++ b/.github/workflows/npm-build.yaml
@@ -2,6 +2,9 @@ name: npm build
 
 on: push
 
+permissions:
+  contents: read
+
 jobs:
   npm-build:
     name: CI Angular app through Github Actions
