--- a/.github/workflows/npm-build.yaml
+++ b/.github/workflows/npm-build.yaml
@@ -8,6 +8,8 @@ permissions:
 jobs:
   npm-build:
     name: CI Angular app through Github Actions
+    outputs:
+      status: ${{ job.status }}
     runs-on: ubuntu-latest
 
     steps:
@@ -32,3 +34,12 @@ jobs:
       - name: ensure package compiles
         run: |
           npm run build
+
+  slack-notification:
+    needs: [npm-build]
+    if: ${{ always() && contains(fromJSON('["failure", "cancelled"]'), needs.npm-build.outputs.status ) && github.ref_name == github.event.repository.default_branch }}
+    secrets:
+      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+    uses: senzing-factory/build-resources/.github/workflows/build-failure-slack-notification.yaml@v2
+    with:
+      job-status: ${{ needs.npm-build.outputs.status }}
