senzing-factory/build-resources#179 add slack notifications (#366)
* senzing-factory/build-resources#179 add slack notifications

* bump node action version

* run github actions dependabot daily

--- a/.github/workflows/npm-build.yaml
+++ b/.github/workflows/npm-build.yaml
@@ -8,13 +8,15 @@ permissions:
 jobs:
   npm-build:
     name: CI Angular app through Github Actions
+    outputs:
+      status: ${{ job.status }}
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - name: use Node.js 18.x
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18.x
 
@@ -32,3 +34,12 @@ jobs:
       - name: ensure package compiles
         run: |
           npm run build
+
+  slack-notification:
+    needs: [npm-build]
+    if: ${{ always() && contains(fromJSON('["failure", "cancelled"]'), needs.npm-build.outputs.status ) && github.ref_name == github.event.repository.default_branch }}
+    secrets:
+      SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+    uses: senzing-factory/build-resources/.github/workflows/build-failure-slack-notification.yaml@v2
+    with:
+      job-status: ${{ needs.npm-build.outputs.status }}
