--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ speed-measure-plugin.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/cspell.json
 
 # misc
 /.angular/cache
