reusable cspell, claude pr reviews, link issues and prs (#423)

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ speed-measure-plugin.json
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -45,3 +44,9 @@ package-lock.old.json
 # System Files
 .DS_Store
 Thumbs.db
+
+# Visual Studio code
+.vscode/*
+!.vscode/cspell.json
+*.code-workspace
+.history
